==> Samraksh/eMote/MicroFrameworkPK_v4_3/DeviceCode/Targets/Native/Max3263x/DeviceCode/drivers/gpio/netmf_gpio.cpp <==
#include <tinyhal.h>
#include <max3263x.h>
#include "netmf_gpio.h"
#include <gpio.h>
#define GPIO_DEBUG_PRINT(format, ...) hal_printf("[Native] [GPIO Driver] " format " at %d, %s \n", ##__VA_ARGS__, __LINE__, __FILE__)
#define GPIO_DEBUG_PRINT(format, ...) hal_printf("[Native] [GPIO Driver] " format "\n", ##__VA_ARGS__)
#define GPIO_DEBUG_PRINT(format, ...)
#define NUMBER_OF_EXTI_LINES 16

static BOOL IsOutputPin(GPIO_PIN Pin)
{
	uint16_t port;
	uint16_t port_pin_number;
	BOOL isOutput;

	if (Pin > GPIO_PINS) { return FALSE; }

	port = GPIO_GetPort(Pin);
	port_pin_number = GPIO_GetPinNumber(Pin);

	uint32_t out_mode = MXC_GPIO->out_mode[port];
	uint32_t func_sel = MXC_GPIO->func_sel[port];

	out_mode = (out_mode >> (4 * port_pin_number)) & 0xf;
	func_sel = (func_sel >> (4 * port_pin_number)) & 0xf;

	isOutput = FALSE;
	if ((out_mode == GPIO_PAD_NORMAL) | (out_mode == GPIO_PAD_SLOW) | (out_mode == GPIO_PAD_FAST))
		isOutput = TRUE;
	else
		isOutput = FALSE;

	if ((func_sel == GPIO_FUNC_GPIO) & (isOutput == TRUE ))
		return TRUE;
	else
		return FALSE;
}

uint32_t GPIO_GetIRQNumber(uint16_t port)
{
	UINT32 irq_number;

	switch(port)
	{
	case	0:
		irq_number = GPIO_P0_IRQn;
		break;
	case 	1:
		irq_number = GPIO_P1_IRQn;
		break;
	case 	2:
		irq_number = GPIO_P2_IRQn;
		break;
	case    3:
		irq_number = GPIO_P3_IRQn;
		break;
	case    4:
		irq_number = GPIO_P4_IRQn;
		break;
	case	5:
		irq_number = GPIO_P5_IRQn;
		break;
	case	6:
		irq_number = GPIO_P6_IRQn;
		break;
	default:
		irq_number = NULL;
		break;
	}

	return irq_number;
}

HAL_CALLBACK_FPN GPIO_GetCallBack(uint16_t port)
{
	HAL_CALLBACK_FPN callback;

	switch(port)
	{
	case	0:
		callback = P0_HANDLER;
		break;
	case 	1:
		callback = P1_HANDLER;
		break;
	case 	2:
		callback = P2_HANDLER;
		break;
	case    3:
		callback = P3_HANDLER;
		break;
	case    4:
		callback = P4_HANDLER;
		break;
	case	5:
		callback = P5_HANDLER;
		break;
	case	6:
		callback = P6_HANDLER;
		break;
	default:
		callback = NULL;
		break;
	}

	return callback;
}

void GPIO_ConfigurePin( uint16_t port, uint16_t Pin, gpio_func_t function, gpio_pad_t pad)
{
	gpio_cfg_t pin = { port, Pin, function, pad };

	GPIO_Config(&pin);
}

void CPU_GPIO_DisablePin( GPIO_PIN Pin, GPIO_RESISTOR ResistorState, UINT32 Direction, GPIO_ALT_MODE AltFunction )
{
	if(Pin > GPIO_PINS)
	{
		GPIO_DEBUG_PRINT("%s", c_strGpioBadPin);
		return;
	}

	uint32_t port = GPIO_GetPort(Pin);
	uint32_t port_pin = GPIO_GetPin(Pin);
	uint16_t port_pin_number = GPIO_GetPinNumber(Pin);
	gpio_cfg_t pin = { port, port_pin, GPIO_FUNC_GPIO, GPIO_PAD_OPEN_DRAIN };

	GPIO_Config(&pin);

	// Remove any user interrupts
	callbacks[port][port_pin_number] = NULL;
    cbparam[port][port_pin_number] = NULL;
}

void CPU_GPIO_EnableOutputPin( GPIO_PIN Pin, BOOL InitialState )
{
	// Check if the input pin is less than max pins
	if(Pin > GPIO_PINS)
	{
		GPIO_DEBUG_PRINT("%s", c_strGpioBadPin);
		return;
	}

	uint16_t port = GPIO_GetPort(Pin);
	uint16_t pin = GPIO_GetPin(Pin);
	CPU_GPIO_SetPinState(Pin, InitialState);
	GPIO_ConfigurePin(port, pin, GPIO_FUNC_GPIO, GPIO_PAD_NORMAL);
}

BOOL CPU_GPIO_EnableInputPin( GPIO_PIN Pin, BOOL GlitchFilterEnable, GPIO_INTERRUPT_SERVICE_ROUTINE PIN_ISR, GPIO_INT_EDGE IntEdge, GPIO_RESISTOR ResistorState )
{
	if(Pin > GPIO_PINS)
	{
		GPIO_DEBUG_PRINT("%s", c_strGpioBadPin);
		return FALSE;
	}

	gpio_pad_t mode;
	if (ResistorState == RESISTOR_DISABLED) {
		mode = GPIO_PAD_INPUT;
	} else if(ResistorState == RESISTOR_PULLDOWN) {
		mode = GPIO_PAD_INPUT_PULLDOWN;
	} else if(ResistorState == RESISTOR_PULLUP) {
		mode = GPIO_PAD_INPUT_PULLUP;
	} else {
		GPIO_DEBUG_PRINT("Invalid resistor configuration");
		return FALSE;
	}

	// Short circuit for simple inputs.
	if ( PIN_ISR == NULL && IntEdge == GPIO_INT_NONE && GlitchFilterEnable == false ) {
		uint16_t port = GPIO_GetPort(Pin);
		uint16_t pin = GPIO_GetPin(Pin);
		GPIO_ConfigurePin(port, pin, GPIO_FUNC_GPIO, mode);
		return TRUE;
	}

	return CPU_GPIO_EnableInputPin2(Pin, GlitchFilterEnable, PIN_ISR, NULL, IntEdge, ResistorState );
}

BOOL CPU_GPIO_EnableInputPin3( GPIO_PIN Pin, BOOL GlitchFilterEnable, GPIO_INT_EDGE IntEdge, GPIO_RESISTOR ResistorState )
{
	if(Pin > GPIO_PINS)
	{
		GPIO_DEBUG_PRINT("%s", c_strGpioBadPin);
		return FALSE;
	}

	gpio_pad_t mode;

	if (ResistorState == RESISTOR_DISABLED) {
		mode = GPIO_PAD_INPUT;
	} else if(ResistorState == RESISTOR_PULLDOWN) {
		mode = GPIO_PAD_INPUT_PULLDOWN;
	} else if(ResistorState == RESISTOR_PULLUP) {
		mode = GPIO_PAD_INPUT_PULLUP;
	} else {
		GPIO_DEBUG_PRINT("Invalid resistor configuration");
		return FALSE;
	}

	uint16_t port = GPIO_GetPort(Pin);
	uint16_t pin = GPIO_GetPin(Pin);
	GPIO_ConfigurePin(port, pin, GPIO_FUNC_GPIO, mode);
	
	return TRUE;
}

BOOL CPU_GPIO_EnableInputPin2( GPIO_PIN Pin, BOOL GlitchFilterEnable, GPIO_INTERRUPT_SERVICE_ROUTINE PIN_ISR, void* ISR_Param, GPIO_INT_EDGE IntEdge, GPIO_RESISTOR ResistorState )
{
	if(Pin > GPIO_PINS)
	{
		GPIO_DEBUG_PRINT("%s", c_strGpioBadPin);
		return FALSE;
	}

	gpio_pad_t mode;

	if (ResistorState == RESISTOR_DISABLED) {
		mode = GPIO_PAD_INPUT;
	} else if(ResistorState == RESISTOR_PULLDOWN) {
		mode = GPIO_PAD_INPUT_PULLDOWN;
	} else if(ResistorState == RESISTOR_PULLUP) {
		mode = GPIO_PAD_INPUT_PULLUP;
	} else {
		GPIO_DEBUG_PRINT("Invalid resistor configuration");
		return FALSE;
	}

	gpio_int_mode_t interruptMode;
	if (IntEdge == GPIO_INT_NONE) {
		interruptMode = GPIO_INT_DISABLE;
	} else if(IntEdge == GPIO_INT_EDGE_LOW) {
		interruptMode = GPIO_INT_FALLING_EDGE;
	} else if(IntEdge == GPIO_INT_EDGE_HIGH) {
		interruptMode = GPIO_INT_RISING_EDGE;
	} else if(IntEdge == GPIO_INT_EDGE_BOTH) {
		interruptMode = GPIO_INT_ANY_EDGE;	 
	} else if(IntEdge == GPIO_INT_LEVEL_HIGH) {
		interruptMode = GPIO_INT_HIGH_LEVEL;
	} else if(IntEdge == GPIO_INT_LEVEL_LOW) {
		interruptMode = GPIO_INT_LOW_LEVEL;
	} else {
		GPIO_DEBUG_PRINT("Invalid interruptMode configuration");
		return FALSE;
	}

	uint16_t port = GPIO_GetPort(Pin);
	uint16_t pin = GPIO_GetPin(Pin);
	uint16_t port_pin_number = GPIO_GetPinNumber(Pin);
	GPIO_ConfigurePin(port, pin, GPIO_FUNC_GPIO, mode);

	if (PIN_ISR)
	{
		IntConfig(port, port_pin_number, interruptMode);
	  	callbacks[port][port_pin_number] = PIN_ISR;
        cbparam[port][port_pin_number] = ISR_Param;
		gpio_cfg_t pinCfg = { port, pin, GPIO_FUNC_GPIO, mode };
		GPIO_IntEnable(&pinCfg);
		CPU_INTC_ActivateInterrupt(GPIO_GetIRQNumber(port), GPIO_GetCallBack(port), NULL);
	} else {
		callbacks[port][port_pin_number] = NULL;
        cbparam[port][port_pin_number] = NULL;
	}

	return TRUE;
}

BOOL CPU_GPIO_GetPinState( GPIO_PIN Pin )
{
	uint16_t port;
	uint16_t port_pin_number;
	BOOL pinState = FALSE;

	if (Pin > GPIO_PINS) { return FALSE; }

	port = GPIO_GetPort(Pin);
	port_pin_number = GPIO_GetPinNumber(Pin);

	uint32_t out_mode = MXC_GPIO->out_mode[port];
	uint32_t func_sel = MXC_GPIO->func_sel[port];
	uint32_t port_value;

	out_mode = (out_mode >> (4 * port_pin_number)) & 0xf;
	func_sel = (func_sel >> (4 * port_pin_number)) & 0xf;

	if (func_sel != GPIO_FUNC_GPIO)
		return FALSE;

	if ((out_mode == GPIO_PAD_NORMAL) | (out_mode == GPIO_PAD_SLOW) | (out_mode == GPIO_PAD_FAST)){
		port_value = MXC_GPIO->out_val[port];
		port_value = (port_value >>  port_pin_number) & 0x1;
	} else if ((out_mode == GPIO_PAD_INPUT) | (out_mode == GPIO_PAD_INPUT_PULLUP) | (out_mode == GPIO_PAD_INPUT_PULLDOWN)){
		port_value = MXC_GPIO->in_val[port];
		port_value = (port_value >> port_pin_number) & 0x1;
	} else {
		return FALSE;
	}

	pinState = port_value;

	return pinState;
}

void CPU_GPIO_SetPinState( GPIO_PIN Pin, BOOL PinState )
{
	if(Pin > GPIO_PINS)
	{
		GPIO_DEBUG_PRINT("%s", c_strGpioBadPin);
		return;
	}

	uint16_t port;
	uint16_t port_pin;
	port = GPIO_GetPort(Pin);
	port_pin = GPIO_GetPin(Pin);

	gpio_cfg_t pin = { port, port_pin, GPIO_FUNC_GPIO, GPIO_PAD_NORMAL };

	if(PinState) {
		GPIO_OutSet(&pin);
	} else {
		GPIO_OutClr(&pin);
	}
}
