==> Samraksh/eMote/MicroFrameworkPK_v4_3/DeviceCode/Targets/Native/SmartFusion2/DeviceCode/drivers/gpio/stm32_netmf_gpio.cpp <==
#include <tinyhal.h>
#include <cmsis/m2sxxx.h>
#include "netmf_gpio.h"
#define GPIO_DEBUG_PRINT(format, ...) hal_printf("[Native] [GPIO Driver] " format " at %d, %s \n", ##__VA_ARGS__, __LINE__, __FILE__)
#define GPIO_DEBUG_PRINT(format, ...) hal_printf("[Native] [GPIO Driver] " format "\n", ##__VA_ARGS__)
#define GPIO_DEBUG_PRINT(format, ...)
#define NUMBER_OF_EXTI_LINES 16

static BOOL IsOutputPin(GPIO_PIN Pin)
{
	GPIO_TypeDef *port;
	unsigned int p;
	unsigned int mode;
	unsigned int mode_mask = 0x03;
	BOOL isOutput;

	if (Pin > GPIO_PINS) { return FALSE; }

	port = GPIO_GetPortPtr(Pin);
	p = GPIO_GetPin(Pin);

	if (p < 8) { // check mode in CRL
		mode = port->CRL;
		mode_mask = mode_mask << (p*4);
	}
	else { // check mode in CRH
		mode = port->CRH;
		mode_mask = mode_mask << (p*2);
	}

	if ( (mode & mode_mask) == 0 ) {
		isOutput = FALSE;
	}
	else {
		isOutput = TRUE;
	}
	return isOutput;
}

UINT32 GPIO_GetIRQNumber(GPIO_PIN Pin)
{
	UINT32 line = Pin % GPIO_PPP;
	UINT32 irq_number;

	switch(line)
	{
	case	0:
		irq_number = EXTI0_IRQn;
		break;
	case 	1:
		irq_number = EXTI1_IRQn;
		break;
	case 	2:
		irq_number = EXTI2_IRQn;
		break;
	case    3:
		irq_number = EXTI3_IRQn;
		break;
	case    4:
		irq_number = EXTI4_IRQn;
		break;
	case	5:
	case	6:
	case    7:
	case    8:
	case    9:
		irq_number = EXTI9_5_IRQn;
		break;
	case   10:
	case   11:
	case   12:
	case   13:
	case   14:
	case   15:
		irq_number = EXTI15_10_IRQn;
		break;

	}

	return irq_number;
}

HAL_CALLBACK_FPN GPIO_GetCallBack(GPIO_PIN Pin)
{
	UINT32 line = Pin % GPIO_PPP;
	HAL_CALLBACK_FPN callback;

	switch(line)
	{
	case	0:
		callback = EXTI0_IRQ_HANDLER;
		break;
	case 	1:
		callback = EXTI1_IRQ_HANDLER;
		break;
	case 	2:
		callback = EXTI2_IRQ_HANDLER;
		break;
	case    3:
		callback = EXTI3_IRQ_HANDLER;
		break;
	case    4:
		callback = EXTI4_IRQ_HANDLER;
		break;
	case	5:
	case	6:
	case    7:
	case    8:
	case    9:
		callback = EXTI9_5_IRQ_HANDLER;
		break;
	case   10:
	case   11:
	case   12:
	case   13:
	case   14:
	case   15:
		callback = EXTI15_10_IRQ_Handler;
		break;

	}

	return callback;
}

void GPIO_ConfigurePin( GPIO_TypeDef* GPIO_PortSource, uint16_t Pin, GPIOMode_TypeDef mode, GPIOSpeed_TypeDef speed)
{
	GPIO_InitTypeDef GPIO_InitStructure;
	GPIO_InitStructure.GPIO_Pin = Pin;
	GPIO_InitStructure.GPIO_Mode = mode;
	GPIO_InitStructure.GPIO_Speed = speed;
	GPIO_Init(GPIO_PortSource, &GPIO_InitStructure);
}

void CPU_GPIO_DisablePin( GPIO_PIN Pin, GPIO_RESISTOR ResistorState, UINT32 Direction, GPIO_ALT_MODE AltFunction )
{
	if(Pin > GPIO_PINS)
	{
		GPIO_DEBUG_PRINT("%s", c_strGpioBadPin);
		return;
	}

	GPIO_TypeDef* port = GPIO_GetPortPtr(Pin);
	uint16_t pinInHex = GPIO_GetPin(Pin);
	GPIO_ConfigurePin(port, pinInHex);
	CPU_GPIO_SetPinState(Pin, FALSE);

	// Remove any user interrupts
	gpio_isr[Pin] = NULL;
	gpio_parm[Pin] = NULL;
}

void CPU_GPIO_EnableOutputPin( GPIO_PIN Pin, BOOL InitialState )
{
	// Check if the input pin is less than max pins
	if(Pin > GPIO_PINS)
	{
		GPIO_DEBUG_PRINT("%s", c_strGpioBadPin);
		return;
	}

	GPIO_TypeDef* port = GPIO_GetPortPtr(Pin);
	uint16_t pinInHex = GPIO_GetPin(Pin);
	CPU_GPIO_SetPinState(Pin, InitialState);
	GPIO_ConfigurePin(port, pinInHex, GPIO_Mode_Out_PP);
}

BOOL CPU_GPIO_EnableInputPin( GPIO_PIN Pin, BOOL GlitchFilterEnable, GPIO_INTERRUPT_SERVICE_ROUTINE PIN_ISR, GPIO_INT_EDGE IntEdge, GPIO_RESISTOR ResistorState )
{
	if(Pin > GPIO_PINS)
	{
		GPIO_DEBUG_PRINT("%s", c_strGpioBadPin);
		return FALSE;
	}

	// Short circuit for simple inputs.
	if ( PIN_ISR == NULL && IntEdge == GPIO_INT_NONE && ResistorState == RESISTOR_DISABLED && GlitchFilterEnable == false ) {
		GPIOMode_TypeDef mode = GPIO_Mode_IN_FLOATING;
		GPIO_TypeDef* port = GPIO_GetPortPtr(Pin);
		uint16_t pinInHex = GPIO_GetPin(Pin);
		GPIO_ConfigurePin(port, pinInHex, mode);
		return TRUE;
	}

	return CPU_GPIO_EnableInputPin2(Pin, GlitchFilterEnable, PIN_ISR, NULL, IntEdge, ResistorState );
}

BOOL CPU_GPIO_EnableInputPin3( GPIO_PIN Pin, BOOL GlitchFilterEnable, GPIO_INT_EDGE IntEdge, GPIO_RESISTOR ResistorState )
{
	if(Pin > GPIO_PINS)
	{
		GPIO_DEBUG_PRINT("%s", c_strGpioBadPin);
		return FALSE;
	}

	GPIOMode_TypeDef mode;

	if (ResistorState == RESISTOR_DISABLED) {
		mode = GPIO_Mode_IN_FLOATING;
	} else if(ResistorState == RESISTOR_PULLDOWN) {
		mode = GPIO_Mode_IPD;
	} else if(ResistorState == RESISTOR_PULLUP) {
		mode = GPIO_Mode_IPU;
	} else {
		GPIO_DEBUG_PRINT("Invalid resistor configuration");
		return FALSE;
	}

	GPIO_TypeDef* port = GPIO_GetPortPtr(Pin);
	uint16_t pinInHex = GPIO_GetPin(Pin);
	GPIO_ConfigurePin(port, pinInHex, mode);
	
	return TRUE;
}

BOOL CPU_GPIO_EnableInputPin2( GPIO_PIN Pin, BOOL GlitchFilterEnable, GPIO_INTERRUPT_SERVICE_ROUTINE PIN_ISR, void* ISR_Param, GPIO_INT_EDGE IntEdge, GPIO_RESISTOR ResistorState )
{
	if(Pin > GPIO_PINS)
	{
		GPIO_DEBUG_PRINT("%s", c_strGpioBadPin);
		return FALSE;
	}

	EXTI_InitTypeDef EXTI_InitStructure;

	GPIOMode_TypeDef mode;
	if (ResistorState == RESISTOR_DISABLED) {
		mode = GPIO_Mode_IN_FLOATING;
	} else if(ResistorState == RESISTOR_PULLDOWN) {
		mode = GPIO_Mode_IPD;
	} else if(ResistorState == RESISTOR_PULLUP) {
		mode = GPIO_Mode_IPU;
	} else mode = GPIO_Mode_IN_FLOATING;

	GPIO_TypeDef* port = GPIO_GetPortPtr(Pin);
	uint16_t pinInHex = GPIO_GetPin(Pin);
	GPIO_ConfigurePin(port, pinInHex, mode);

	// Interrupt support for the gpio pins
	GPIO_EXTILineConfig(GPIO_GetPort(Pin), (Pin % GPIO_PPP));

	if(PIN_ISR)
	{
		EXTI_InitStructure.EXTI_Line = GPIO_GetExtiLine(Pin);

		EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;

		if(GPIO_INT_EDGE_LOW == IntEdge)
			EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Falling;
		else if(GPIO_INT_EDGE_HIGH == IntEdge)
			EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Rising;
		else if(GPIO_INT_EDGE_BOTH == IntEdge)
			EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Rising_Falling;
		// Not supported on the device
		else if(GPIO_INT_LEVEL_HIGH == IntEdge || GPIO_INT_LEVEL_LOW == IntEdge)
			return FALSE;

		// Initialize external interrupts
		EXTI_InitStructure.EXTI_LineCmd = ENABLE;
		EXTI_Init(&EXTI_InitStructure);

		gpio_isr[Pin] = PIN_ISR;
		gpio_parm[Pin] = ISR_Param;

		CPU_INTC_ActivateInterrupt(GPIO_GetIRQNumber(Pin), (HAL_CALLBACK_FPN) GPIO_GetCallBack(Pin), NULL);
	}
	else
	{
		gpio_isr[Pin] = NULL;
		gpio_parm[Pin] = NULL;
	}

	return TRUE;
}

BOOL CPU_GPIO_GetPinState( GPIO_PIN Pin )
{
	if(Pin > GPIO_PINS)
	{
		GPIO_DEBUG_PRINT("%s", c_strGpioBadPin);
		return FALSE;
	}

	GPIO_TypeDef* port = GPIO_GetPortPtr(Pin);
	uint16_t pinInHex = GPIO_GetPin(Pin);
	if(IsOutputPin(Pin)){
		return (BOOL)GPIO_ReadOutputDataBit(port, pinInHex);
	} else	{
		return (BOOL)GPIO_ReadInputDataBit(port, pinInHex);
	}
}

void CPU_GPIO_SetPinState( GPIO_PIN Pin, BOOL PinState )
{
	if(Pin > GPIO_PINS)
	{
		GPIO_DEBUG_PRINT("%s", c_strGpioBadPin);
		return;
	}

	//If it isn't an output pin, then its not valid to Set(). EnableOutputPin() first.
	//If you call Set() and it isn't an output, nothing will happen.
	//if (!IsOutputPin(Pin)) { return; }

	GPIO_TypeDef* port = GPIO_GetPortPtr(Pin);
	uint16_t pinInHex = GPIO_GetPin(Pin);
	if(PinState) {
		GPIO_WriteBit(port, pinInHex, Bit_SET);
	} else {
		GPIO_WriteBit(port, pinInHex, Bit_RESET);
	}
}
